# lzr

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.lzr
src/: api.py  core.py  main.py  settings.py
src/commands/: __init__.py  env.py  lazurite.py
src/helpers/: api.py  config.py  utils.py  venv.py
src/lzr/: __init__.py  main.py
src/lzr/commands/: env.py  lazurite.py
src/lzr/helpers/: github_api.py  utils.py  venv.py
