[tool.poetry]
name = "lzr"
version = "0.1.0"
description = ""
authors = ["Hamlet <hamlets849@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
semver = "^3.0.2"
requests = "^2.32.3"
toml = "^0.10.2"
cachetools = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
